fixed timeout bug for rps and fixed a few other issues with code

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 venv/
 
 src/extensions/channels.json
-src/extensions/guild.json
+src/extensions/guilds.json
 src/extensions/rps.json
 gentylogo.png
 __pycache__/
