set up examples for the json files, had to reimport asyncio per the disnake documentation or else the exception is skipepd

--- a/src/data/rps.json.example
+++ b/src/data/rps.json.example
@@ -1,7 +1,7 @@
 {
-    "user.id(int)": {
-        "wins": "number of wins(int)",
-        "losses": "number of losses(int)",
-        "ties": "number of ties(int)"
+    "user.id": {
+        "wins": number_of_wins,
+        "losses": number_of_losses,
+        "ties": number_of_ties
     }
 }
