on_slash_command_error isn't sending a discord message on error Fixes #14

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *env
 venv/
 
-src/extensions/channels.json
-src/extensions/guilds.json
-src/extensions/rps.json
+src/data/guilds.json
+src/data/channels.json
+src/data/rps.json
 gentylogo.png
 __pycache__/
