--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,18 +3,46 @@ name: Pylint
 on: [push, pull_request]
 
 jobs:
-  build:
+  pre-commit:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
+    - name: Set up python 3.9
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.9
+        cache: "pip"
+        cache-dependency-path: |
+          requirements.txt
+          
+    - name: Install requirements
+      run: python -m pip install -r requirements.txt
+      
+    - name: Run pre-commit
+      uses: pre-commit/action@v2.0.3
+      
+  pylint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+      fail-fast: false
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+        cache: "pip"
+        cache-dependency-path: |
+            requirements.txt
+            
+    - name: Install requirements
       run: |
         python -m pip install -r requirements.txt
         pip install pylint
