--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Install requirements
       run: |
         python -m pip install -r requirements.txt
-        pip install pylint
-    - name: Analysing the code with pylint
+        pip install flake8
+    - name: Lint code using flake8
       run: |
-        pylint $(git ls-files '*.py')
+        flake8 $(git ls-files '*.py')
