--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
-[tool.black]
-line-length = 100
-target-version = ["py38", "py39", "py310"]
+[tool.flake8]
+max-line-length = 100
 
 
 [tool.isort]
@@ -9,22 +8,3 @@ py_version = 38
 line_length = 100
 combine_as_imports = true
 filter_files = true
-
-
-strictParameterNoneValue = false
-reportInvalidStringEscapeSequence = false
-reportPropertyTypeMismatch = true
-reportDuplicateImport = true
-reportUntypedFunctionDecorator = true
-reportUntypedClassDecorator = true
-reportUntypedBaseClass = true
-reportInvalidTypeVarUse = true
-reportUnnecessaryCast = true
-reportSelfClsParameterName = true
-reportUnsupportedDunderAll = true
-reportUnusedImport = true
-reportUnusedVariable = true
-reportUntypedNamedTuple = true
-reportUnnecessaryComparison = true
-reportUnnecessaryTypeIgnoreComment = true
-reportUnknownLambdaType = true
