--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,28 +3,8 @@ name: Pylint
 on: [push, pull_request]
 
 jobs:
-  pre-commit:
-    runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-        cache: "pip"
-        cache-dependency-path: |
-          requirements.txt
-
-    - name: Install requirements
-      run: python -m pip install -r requirements.txt
-
-    - name: Run pre-commit
-      uses: pre-commit/action@v2.0.3
-
-  pylint:
+   lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
