--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
-name: Pylint
+name: Lint
 
 on: [push, pull_request]
 
 jobs:
 
-   lint:
+   flake8:
     runs-on: ubuntu-latest
     strategy:
       matrix:
