--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ max-line-length = 100
 
 
 [tool.isort]
-profile = "flake8"
+profile = "black"
 py_version = 38
 line_length = 100
 combine_as_imports = true
