--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,30 @@
 name: Lint
 
-on: [push, pull_request]
+on:
+  pull_request
+  push:
+    branches: [master]
 
 jobs:
+   pre-commit:
+    runs-on:ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up python 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.9
+        cache: "pip"
+        cache-dependency-path: |
+          requirements.txt
+
+    - name: Install requirements
+      run: python -m pip install -r requirements.txt
+
+    - name: run pre-commit
+      uses: pre-commit/action@v2.0.3
 
    flake8:
     runs-on: ubuntu-latest
